--- a/src/app/modules/admin/dashbaord/dashbaord.component.html
+++ b/src/app/modules/admin/dashbaord/dashbaord.component.html
@@ -35,7 +35,7 @@
                     <!-- Summary -->
                     <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                         <div class="flex items-start justify-between">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Summary</div>
+                            <div class="text-lg font-medium tracking-tight leading-6 truncate">User Count</div>
                             <div class="ml-2 -mt-2 -mr-3">
                                 <button mat-icon-button [matMenuTriggerFor]="summaryMenu">
                                     <mat-icon class="icon-size-5"
@@ -51,17 +51,17 @@
                         <div class="flex flex-col items-center mt-2">
                             <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-blue-500">21
                             </div>
-                            <div class="text-lg font-medium text-blue-600 dark:text-blue-500">Due Tasks</div>
+                            <!-- <div class="text-lg font-medium text-blue-600 dark:text-blue-500">Due Tasks</div> -->
                             <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                <div class="text-md font-medium truncate">Completed:</div>
-                                <div class="ml-1.5 text-lg font-semibold">13</div>
+                                <!-- <div class="text-md font-medium truncate">Completed:</div> -->
+                                <!-- <div class="ml-1.5 text-lg font-semibold">13</div> -->
                             </div>
                         </div>
                     </div>
                     <!-- Overdue -->
                     <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
                         <div class="flex items-start justify-between">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Overdue</div>
+                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Document Count</div>
                             <div class="ml-2 -mt-2 -mr-3">
                                 <button mat-icon-button [matMenuTriggerFor]="overdueMenu">
                                     <mat-icon class="icon-size-5"
@@ -77,40 +77,15 @@
                         <div class="flex flex-col items-center mt-2">
                             <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-red-500">17
                             </div>
-                            <div class="text-lg font-medium text-red-600 dark:text-red-500">Tasks</div>
+                            <!-- <div class="text-lg font-medium text-red-600 dark:text-red-500">Tasks</div> -->
                             <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                <div class="text-md font-medium truncate">From yesterday:</div>
-                                <div class="ml-1.5 text-lg font-semibold">9</div>
+                                <!-- <div class="text-md font-medium truncate">From yesterday:</div> -->
+                                <!-- <div class="ml-1.5 text-lg font-semibold">9</div> -->
                             </div>
                         </div>
                     </div>
                     <!-- Issues -->
-                    <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
-                        <div class="flex items-start justify-between">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">Issues</div>
-                            <div class="ml-2 -mt-2 -mr-3">
-                                <button mat-icon-button [matMenuTriggerFor]="issuesMenu">
-                                    <mat-icon class="icon-size-5"
-                                        [svgIcon]="'heroicons_mini:ellipsis-vertical'"></mat-icon>
-                                </button>
-                                <mat-menu #issuesMenu="matMenu">
-                                    <button mat-menu-item>Yesterday</button>
-                                    <button mat-menu-item>2 days ago</button>
-                                    <button mat-menu-item>3 days ago</button>
-                                </mat-menu>
-                            </div>
-                        </div>
-                        <div class="flex flex-col items-center mt-2">
-                            <div class="text-7xl sm:text-8xl font-bold tracking-tight leading-none text-amber-500">24
-                            </div>
-                            <div class="text-lg font-medium text-amber-600 dark:text-amber-500">Open</div>
-                            <div class="flex items-baseline justify-center w-full mt-5 text-secondary">
-                                <div class="text-md font-medium truncate">Closed today:</div>
-                                <div class="ml-1.5 text-lg font-semibold">19</div>
-                            </div>
-                        </div>
-                    </div>
-
+                  
                 </div>
             </div>
         </div>
